<resources>
    <string name="app_name">MyButler</string>
    <string name="text_butler_service">服务管家</string>
    <string name="text_wechat">微信精选</string>
    <string name="text_girl">美女社区</string>
    <string name="text_user_info">个人中心</string>
    <string name="text_registered">注册</string>
    <string name="text_forget_password">忘记密码?</string>
    <string name="text_login">登录</string>
    <string name="text_keep_password">记住密码</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="text_user_name">用户名</string>
    <string name="text_age">年龄</string>
    <string name="text_desc">简介</string>
    <string name="text_boy">男</string>
    <string name="text_girl_f">女</string>
    <string name="text_password">密码</string>
    <string name="text_password_again">再次输入密码</string>
    <string name="text_register_remind">注册成功需要前往邮箱验证，否则无法登录！</string>
    <string name="text_email">邮箱</string>
    <string name="text_toast_empty">输入框不能为空</string>
    <string name="text_two_input_not_consistent">两次输入的密码不一致哦</string>
    <string name="text_two_input_not_consistent_">两次输入的密码不一致哦</string>
    <string name="text_nothing">这个人很懒，什么都没有留下！</string>
    <string name="text_registered_successful">注册成功</string>
    <string name="text_registered_failure">注册失败</string>
    <string name="text_tost_empty">输入框不能为空</string>
    <string name="text_email_send_ok">邮箱已经发送至</string>
    <string name="text_email_send_no">邮箱发送失败</string>
    <string name="reset_successfully">重置密码成功</string>
    <string name="reset_failed">重置密码失败</string>
    <string name="text_editor_password">修改密码</string>
    <string name="text_now_password">旧密码</string>
    <string name="text_new_password">新密码</string>
    <string name="text_now_login">正在登录</string>
    <string name="text_editor_success">修改成功</string>
    <string name="text_editor_failure">修改失败</string>
    <string name="text_input_phone">请输入要查询的电话号码</string>
    <string name="text_query">查询</string>
    <string name="text_hello_tts">你好，我是你爱的女神</string>
    <string name="text_more_length">输入长度超出限制</string>
    <string name="text_welfare">福利</string>


    <string name="text_setting_title_1">语音播报</string>
    <string name="text_setting_title_2">智能短信提醒</string>
    <string name="text_setting_title_3">检测版本</string>
    <string name="text_setting_title_4">扫一扫</string>
    <string name="text_setting_title_5">二维码分享</string>
    <string name="text_setting_title_6">我的位置</string>
    <string name="text_setting_title_7">关于软件</string>
    <string name="text_setting_content_1">开启之后与服务管家对讲语音播报</string>
    <string name="text_setting_content_2">开启之后收到短信将弹框提示</string>
    <string name="text_setting_content_3">检查是否有新版本提示下载</string>
    <string name="text_setting_content_4">扫描二维码或者条形码</string>
    <string name="text_setting_content_5">把自己分享给朋友吧</string>
    <string name="text_setting_content_6">时刻掌握自身位置</string>
    <string name="text_setting_content_7">www.imooc.com</string>
    <string name="text_unknown">未知</string>
    <string name="text_my_location">我的位置</string>
    <string name="text_about_app">关于软件</string>
</resources>
